# mcp-server-telegram-pager

./: .gitignore  README.md  pyproject.toml
src/: server.py
src/mcp_server_telegram/: __init__.py  server.py
src/mcp_server_telegram_pager/: generate_session.py  server.py
