[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-telegram-pager"
version = "0.1.0"
description = "A send-only Telegram Pager MCP server for personal AI notifications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "telethon>=1.36.0"
]

[project.scripts]
mcp-server-telegram-pager = "mcp_server_telegram_pager.server:main"
mcp-server-telegram-pager-auth = "mcp_server_telegram_pager.generate_session:main"
